# Object-Oriented_Programming_laboratory_work_5

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: example_1.py  individual_1.py
tests/: test_individual_1.py
